--- a/shardingshpere/build.gradle
+++ b/shardingshpere/build.gradle
@@ -20,16 +20,15 @@ repositories {
 
 dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
-    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.1.1'
+//    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.1.1'
+    implementation 'mysql:mysql-connector-java'
+    implementation 'com.alibaba:druid-spring-boot-starter:1.2.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
+
 }
 
 test {
