--- a/shardingshpere/src/main/resources/application.properties
+++ b/shardingshpere/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.profiles.active=traditional
 
+mybatis.config-locations=classpath:mybatis-config.xml
+# must have this config
+mybatis.mapper-locations=classpath:mappers/*.xml
