--- a/shardingshpere/src/main/resources/hint/hint-databases.yaml
+++ b/shardingshpere/src/main/resources/hint/hint-databases.yaml
@@ -23,7 +23,7 @@ shardingRule:
 
   defaultDatabaseStrategy:
     hint:
-      algorithmClassName: com.shardingsphere.hint.MatchHintShardingAlgorithm
+      algorithmClassName: com.shardingsphere.sharding.hint.MatchHintShardingAlgorithm
   defaultTableStrategy:
     none:
 
