--- a/shardingshpere/build.gradle
+++ b/shardingshpere/build.gradle
@@ -20,9 +20,12 @@ repositories {
 
 dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
-    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.0.0-RC1'
+//    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.0.0-RC1'
+    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.0.0'
+    implementation 'org.apache.shardingsphere:sharding-transaction-xa-core:4.0.0'
+//    implementation 'org.apache.shardingsphere:sharding-transaction-base-seata-at:4.0.0'
     implementation 'mysql:mysql-connector-java'
-    implementation 'com.alibaba:druid-spring-boot-starter:1.2.1'
+//    implementation 'com.alibaba:druid-spring-boot-starter:1.2.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
