--- a/shardingshpere/build.gradle
+++ b/shardingshpere/build.gradle
@@ -23,7 +23,12 @@ dependencies {
 //    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.0.0-RC1'
     implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter:4.0.0'
     implementation 'org.apache.shardingsphere:sharding-transaction-xa-core:4.0.0'
+	// BASE transaction needed
 //    implementation 'org.apache.shardingsphere:sharding-transaction-base-seata-at:4.0.0'
+//    implementation 'io.seata:seata-rm-datasource:1.0.0'
+//    implementation 'io.seata:seata-tm:1.0.0'
+//    implementation 'io.seata:seata-codec-all:1.0.0'
+
     implementation 'mysql:mysql-connector-java'
 //    implementation 'com.alibaba:druid-spring-boot-starter:1.2.1'
 
