--- a/shardingshpere/build.gradle
+++ b/shardingshpere/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 //    implementation 'io.seata:seata-rm-datasource:1.0.0'
 //    implementation 'io.seata:seata-tm:1.0.0'
 //    implementation 'io.seata:seata-codec-all:1.0.0'
+//	implementation 'org.apache.shardingsphere:sharding-jdbc-orchestration-spring-boot-starter:4.0.0'
+//	implementation 'org.apache.shardingsphere:sharding-orchestration-reg-zookeeper-curator:4.0.0'
+//	implementation 'org.apache.shardingsphere:sharding-orchestration-reg-nacos:4.0.0'
+//	implementation 'com.alibaba.nacos:nacos-client:1.0.0'
+
 
     implementation 'mysql:mysql-connector-java'
 //    implementation 'com.alibaba:druid-spring-boot-starter:1.2.1'
